Checkbox for regexps in reports configuration was set in a wrong manner

Only a "!" at a wrong place. Tested it with test-file applied with bug-
report.

BUG: 330946
(cherry picked from commit e13f7ddec5ed89a544947f2d742462aaf782ca02)